--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
       <a href="https://www.linkedin.com/in/alperenulukaya/" target="_blank" class="footer-link">LinkedIn</a>
       <a href="https://www.elektraweb.com/" target="_blank" class="footer-link">Elektraweb</a>
     </div>
+      <div class="contributors-section">
+            <h3>Katkıda Bulunanlar</h3>
+            <ul>
+                <li>ALPEREN ULUKAYA (Proje Sahibi)</li>
+                <li><a href="https://github.com/Talatd" target="_blank">MUSA TALAT DEMİR</a></li>
+            </ul>
+        </div>
+    
   </div>
   
   <script src="js/app.js"></script>
