--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <ul>
                 <li>ALPEREN ULUKAYA (Proje Sahibi)</li>
                 <li><a href="https://github.com/Talatd" target="_blank">MUSA TALAT DEMİR</a></li>
+                <li><a href="https://github.com/incialiyeva" target="_blank">INJİ ALİYEVA</a></li>
+            </ul>
             </ul>
         </div>
     
