--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
             </div>
         </div>
 
-        <a href="https://github.com/ulukayalperen7/WELCOME-TALYA-2025" target="_blank" class="action-btn">
-            <span>GitHub</span>
-        </a>
+        <!-- Yeni GitHub Butonları -->
+        <div class="project-buttons">
+            <a href="https://github.com/ulukayalperen7/hotel-reservation-system" target="_blank" class="project-btn">Hotel Reservation System</a>
+            <a href="https://github.com/ulukayalperen7/AI-API-project" target="_blank" class="project-btn">AI API Project</a>
+        </div>
 
         <div class="footer-links">
             <a href="https://www.linkedin.com/in/alperenulukaya/" target="_blank" class="footer-link">LinkedIn</a>
             <a href="https://www.elektraweb.com/" target="_blank" class="footer-link">Elektraweb</a>
         </div>
+
         <div class="contributors-section">
             <h3>Katkıda Bulunanlar</h3>
             <ul>
@@ -52,9 +55,7 @@
                 <li><a href="https://github.com/incialiyeva" target="_blank">INJİ ALİYEVA</a></li>
                 <li><a href="https://github.com/goksungurel" target="_blank">GÖKSUN GÜREL</a></li>
             </ul>
-            </ul>
         </div>
-
     </div>
 
     <script src="js/app.js"></script>
